// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chrome production manifest > matches the committed permission snapshot 1`] = `
{
  "browser_specific_settings": null,
  "commands": {
    "kill-switch": {
      "description": "Kill switch: stop all ShopBadwill automation",
      "suggested_key": {
        "default": "Ctrl+Shift+K",
      },
    },
  },
  "content_script_matches": [
    [
      "https://shopgoodwill.com/*",
    ],
  ],
  "content_security_policy": null,
  "externally_connectable": null,
  "host_permissions": [
    "https://shopgoodwill.com/*",
    "https://buyerapi.shopgoodwill.com/*",
  ],
  "manifest_version": 3,
  "minimum_chrome_version": "148",
  "oauth2": {
    "client_id": "<SBW_GOOGLE_CLIENT_ID>",
    "scopes": [
      "https://www.googleapis.com/auth/calendar.app.created",
    ],
  },
  "optional_host_permissions": [
    "https://oauth2.googleapis.com/*",
    "https://www.googleapis.com/*",
    "https://ntfy.sh/*",
  ],
  "optional_permissions": [
    "notifications",
    "identity",
    "sidePanel",
    "background",
    "power",
    "nativeMessaging",
  ],
  "permissions": [
    "storage",
    "alarms",
  ],
  "web_accessible_resources": null,
}
`;

exports[`firefox production manifest > matches the committed permission snapshot 1`] = `
{
  "browser_specific_settings": {
    "gecko": {
      "data_collection_permissions": {
        "optional": [
          "technicalAndInteraction",
        ],
        "required": [
          "none",
        ],
      },
      "id": "shopbadwill@trashdad.github.io",
      "strict_min_version": "128.0",
    },
  },
  "commands": {
    "kill-switch": {
      "description": "Kill switch: stop all ShopBadwill automation",
      "suggested_key": {
        "default": "Ctrl+Shift+K",
      },
    },
  },
  "content_script_matches": [
    [
      "https://shopgoodwill.com/*",
    ],
  ],
  "content_security_policy": null,
  "externally_connectable": null,
  "host_permissions": [
    "https://shopgoodwill.com/*",
    "https://buyerapi.shopgoodwill.com/*",
  ],
  "manifest_version": 3,
  "minimum_chrome_version": null,
  "oauth2": null,
  "optional_host_permissions": [
    "https://oauth2.googleapis.com/*",
    "https://www.googleapis.com/*",
    "https://ntfy.sh/*",
  ],
  "optional_permissions": [
    "notifications",
    "identity",
    "nativeMessaging",
  ],
  "permissions": [
    "storage",
    "alarms",
  ],
  "web_accessible_resources": null,
}
`;
